--- a/templates/vue-ele-admin-v2/package.json
+++ b/templates/vue-ele-admin-v2/package.json
@@ -9,18 +9,20 @@
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
-    "release": "node scripts/release.js",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "precommit": "lint-staged",
+    "ls-lint": "ls-lint",
     "commit": "cz"
   },
   "dependencies": {
-    "@charrue/layout": "^0.0.7",
+    "@charrue/eslint-config-vue2": "^0.1.1",
+    "@charrue/layout": "latest",
     "@vue/composition-api": "^1.4.1",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.7",
     "element-ui": "^2.15.6",
+    "js-cookie": "^3.0.1",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "qs": "^6.10.2",
@@ -29,9 +31,13 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/eslint-parser": "^7.16.5",
     "@babel/plugin-proposal-optional-chaining": "^7.16.0",
+    "@charrue/eslint-config-base": "latest",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@ls-lint/ls-lint": "^1.10.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -39,9 +45,8 @@
     "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-airbnb": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
-    "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "commitizen": "^4.2.4",
     "commitlint-config-cz": "^0.13.2",
     "compression": "^1.7.4",
@@ -49,9 +54,7 @@
     "conventional-changelog-cli": "^2.1.1",
     "cors": "^2.8.5",
     "cz-customizable": "^6.3.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint": "^8.6.0",
     "husky": "^7.0.4",
     "kolorist": "^1.5.0",
     "lint-staged": "^12.1.2",
