feat(typescript-library): 更新ts模板库

--- a/templates/typescript-library/.eslintrc
+++ b/templates/typescript-library/.eslintrc
@@ -4,10 +4,11 @@
     "node": true,
     "jest": true
   },
-  "extends": ["eslint-config-charrue-base", "plugin:@typescript-eslint/recommended"],
+  "extends": ["@charrue/base", "plugin:@typescript-eslint/recommended"],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "rules": {
+    "no-console": "off",
     "@typescript-eslint/indent": ["error", 2],
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-explicit-any": "off",
