--- a/templates/typescript-library/package.json
+++ b/templates/typescript-library/package.json
@@ -1,41 +1,52 @@
 {
-  "name": "my-project",
+  "name": "library",
   "version": "0.0.1",
   "description": "",
-  "main": "dist/index.es.js",
-  "typings": "dist/index.d.ts",
+  "main": "./dist/index.cjs.js",
+  "module": "dist/index.es.js",
+  "unpkg": "./dist/index.iife.min.js",
+  "jsdelivr": "./dist/index.iife.min.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rollup -c"
+    "prepare": "husky install",
+    "build": "rollup -c",
+    "lint": "eslint --fix",
+    "test": "vitest"
   },
   "keywords": [
     "typescript",
     "rollup"
   ],
-  "license": "ISC",
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
+    "@charrue/eslint-config-base": "^0.1.3",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
-    "@types/jest": "^27.0.3",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "commitizen": "^4.2.4",
     "esbuild": "^0.14.1",
     "eslint": "^8.3.0",
-    "eslint-config-charrue-base": "^0.1.3",
     "husky": "^7.0.4",
-    "jest": "^27.4.3",
     "lint-staged": "^12.1.2",
+    "rimraf": "^3.0.2",
     "rollup": "^2.60.2",
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-esbuild": "^4.7.2",
-    "ts-jest": "^27.0.7",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "vite": "^2.8.1",
+    "vitest": "^0.3.2"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "lint-staged": {
+    "*.ts": "npm run lint"
+  },
+  "license": "MIT"
 }
