--- a/templates/vue-ele-admin-v2/package.json
+++ b/templates/vue-ele-admin-v2/package.json
@@ -10,9 +10,9 @@
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "precommit": "lint-staged",
     "ls-lint": "ls-lint",
-    "commit": "cz"
+    "commit": "cz",
+    "init-pages": "node ./scripts/init-all-pages.js && node ./scripts/init-all-routes.js"
   },
   "dependencies": {
     "@charrue/eslint-config-vue2": "^0.1.1",
@@ -58,8 +58,9 @@
     "husky": "^7.0.4",
     "kolorist": "^1.5.0",
     "lint-staged": "^12.1.2",
+    "mustache": "^4.2.0",
     "open": "^8.4.0",
-    "sass": "^1.26.5",
+    "sass": "1.32.12",
     "sass-loader": "^8.0.2",
     "script-ext-html-webpack-plugin": "^2.1.5",
     "sirv": "^1.0.19",
