--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
+    "@charrue/eslint-config-base": "^0.1.3",
     "esbuild": "^0.14.1",
     "eslint": "^8.3.0",
-    "eslint-config-charrue-base": "^0.1.3",
     "kolorist": "^1.5.0",
     "minimist": "^1.2.5",
     "prettier": "^2.5.0",
