--- a/package.json
+++ b/package.json
@@ -1,16 +1,35 @@
 {
   "name": "create-fite",
-  "version": "1.4.4",
+  "version": "1.4.6",
   "description": "快速创建可用模板",
+  "keywords": [
+    "charrue",
+    "cli",
+    "degit",
+    "template"
+  ],
+  "author": "ckangwen",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/charrue/create-fite.git"
+  },
+  "homepage": "https://github.com/charrue/create-fite",
+  "license": "MIT",
   "type": "module",
   "main": "index.js",
-  "scripts": {
-    "build": "esbuild --bundle index.js --format=cjs --platform=node --outfile=outfile.cjs"
-  },
   "bin": {
     "create-fite": "outfile.cjs"
   },
-  "license": "MIT",
+  "files": [
+    "outfile.cjs",
+    "README.md"
+  ],
+  "scripts": {
+    "build": "esbuild --bundle index.js --format=cjs --platform=node --outfile=outfile.cjs"
+  },
+  "dependencies": {
+    "degit": "^2.8.4"
+  },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
     "@charrue/eslint-config-base": "^0.1.3",
@@ -19,8 +38,5 @@
     "kolorist": "^1.5.0",
     "minimist": "^1.2.5",
     "prompts": "^2.4.2"
-  },
-  "dependencies": {
-    "degit": "^2.8.4"
   }
 }
