refactor: upgrade to ts

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,5 @@
 {
-  "root": true,
-  "env": {
-    "jest": true,
-    "node": true
-  },
-  "parserOptions": {
-    "parser": "@babel/eslint-parser"
-  },
-  "extends": ["@charrue/base"],
+  "extends": ["@charrue/typescript"],
   "rules": {
     "no-console": "off",
     "no-restricted-syntax": "off"
