--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-fite",
-  "version": "1.6.2",
+  "version": "1.7.0",
   "description": "快速创建可用模板",
   "keywords": [
     "charrue",
@@ -15,28 +15,31 @@
   },
   "homepage": "https://github.com/charrue/create-fite",
   "license": "MIT",
-  "type": "module",
   "main": "index.js",
   "bin": {
-    "create-fite": "outfile.cjs"
+    "create-fite": "bin/create-fite.js"
   },
   "files": [
-    "outfile.cjs",
-    "README.md"
+    "dist",
+    "bin"
   ],
   "scripts": {
-    "build": "esbuild --bundle index.js --format=cjs --platform=node --outfile=outfile.cjs"
+    "build": "tsup",
+    "prepublish": "npm run build"
   },
   "dependencies": {
-    "degit": "^2.8.4"
+    "@clack/prompts": "^0.6.3",
+    "degit": "^2.8.4",
+    "kolorist": "^1.5.0",
+    "minimist": "^1.2.5"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.16.3",
-    "@charrue/eslint-config-base": "^0.1.3",
-    "esbuild": "^0.14.1",
+    "@charrue/eslint-config-typescript": "^0.3.0",
+    "@types/degit": "^2.8.3",
+    "@types/minimist": "^1.2.2",
+    "@types/node": "^18.15.11",
     "eslint": "^8.3.0",
-    "kolorist": "^1.5.0",
-    "minimist": "^1.2.5",
-    "prompts": "^2.4.2"
+    "tsup": "^6.7.0",
+    "typescript": "^5.0.3"
   }
 }
