--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-          registry-url: 'https://registry.npmmirror.com'
+          registry-url: 'https://registry.npmjs.org'
           cache: 'pnpm'
 
       - run: pnpm install
